[gd_scene load_steps=12 format=3 uid="uid://dhgs0gl6sea4s"]

[ext_resource type="Script" uid="uid://fxk0nmqq6jdn" path="res://Scripts/Niveles/NivelBase.gd" id="1_106c4"]
[ext_resource type="PackedScene" uid="uid://bt7y5rkrqt62k" path="res://Scenes/Fondo.tscn" id="2_num37"]
[ext_resource type="Texture2D" uid="uid://b80jxu1e5ag0l" path="res://Assets/Sprites/fondo_2/1.png" id="3_wyk1a"]
[ext_resource type="Texture2D" uid="uid://fybnska08xnq" path="res://Assets/Sprites/fondo_2/2.png" id="4_ybl5x"]
[ext_resource type="Texture2D" uid="uid://dak2anm4ol6tg" path="res://Assets/Sprites/fondo_2/3.png" id="5_6dsnm"]
[ext_resource type="Texture2D" uid="uid://bsurq1r8jiai6" path="res://Assets/Sprites/fondo_2/4.png" id="6_tfdlt"]
[ext_resource type="Texture2D" uid="uid://cwh1mqrpuin5l" path="res://Assets/Sprites/placeholder.png" id="7_v7mvu"]
[ext_resource type="PackedScene" uid="uid://dofoyfamuf0xb" path="res://Scenes/PopupResultados.tscn" id="8_t6igw"]
[ext_resource type="Texture2D" uid="uid://c3ee5srrx453f" path="res://Assets/Sprites/Reciclaje/Tachos/tacho-papel.png" id="9_8vdbj"]
[ext_resource type="Texture2D" uid="uid://wohrqx7tvf71" path="res://Assets/Sprites/Reciclaje/Tachos/tacho-plastico.png" id="10_edw3n"]
[ext_resource type="Texture2D" uid="uid://c34cxyh6s7rly" path="res://Assets/Sprites/Reciclaje/Tachos/tacho-organico.png" id="11_okpwp"]

[node name="NivelBase" type="Node2D"]
script = ExtResource("1_106c4")

[node name="Fondo_Parallax" parent="." instance=ExtResource("2_num37")]

[node name="1" parent="Fondo_Parallax/capa_1" index="0"]
texture = ExtResource("3_wyk1a")

[node name="2" parent="Fondo_Parallax/capa_2" index="0"]
texture = ExtResource("4_ybl5x")

[node name="3" parent="Fondo_Parallax/capa_3" index="0"]
texture = ExtResource("5_6dsnm")

[node name="4" parent="Fondo_Parallax/capa_4" index="0"]
texture = ExtResource("6_tfdlt")

[node name="ContenedorBasuraActual" type="Node2D" parent="."]
texture_filter = 1
position = Vector2(800, 400)

[node name="SpriteBasura" type="Sprite2D" parent="ContenedorBasuraActual"]
texture_filter = 1
scale = Vector2(2.5, 2.5)

[node name="LabelNombreResiduo" type="Label" parent="ContenedorBasuraActual"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -85.0
offset_top = 100.0
offset_right = 78.0
offset_bottom = 149.00002
grow_horizontal = 2
theme_override_colors/font_color = Color(0.84705883, 0.8117647, 0.23921569, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.49803922)
theme_override_font_sizes/font_size = 48
text = "Botella"
horizontal_alignment = 1

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Puntaje" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = 73.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32

[node name="TiempoOIntentos" type="Label" parent="UI"]
offset_left = 50.0
offset_top = 50.0
offset_right = 90.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 32

[node name="ContenedorCaras" type="GridContainer" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
columns = 5

[node name="BarraTiempo" type="TextureProgressBar" parent="UI"]
offset_right = 16.0
offset_bottom = 16.0
scale = Vector2(100, 1)
size_flags_horizontal = 3
size_flags_vertical = 3
step = 0.01
texture_progress = ExtResource("7_v7mvu")

[node name="BotonVolver" type="Button" parent="UI"]
offset_left = 50.0
offset_top = 100.0
offset_right = 224.0
offset_bottom = 143.0
theme_override_font_sizes/font_size = 32
text = "Regresar"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CapaUI" type="CanvasLayer" parent="."]

[node name="PopupResultados" parent="CapaUI" instance=ExtResource("8_t6igw")]
visible = false

[node name="ContenedorTachos" type="HBoxContainer" parent="."]
offset_top = 599.0
offset_right = 1600.0
offset_bottom = 1017.0
alignment = 1

[node name="TachoPapel" type="Sprite2D" parent="ContenedorTachos"]
texture_filter = 1
position = Vector2(300, 200)
scale = Vector2(6, 6)
texture = ExtResource("9_8vdbj")

[node name="Papel" type="Label" parent="ContenedorTachos/TachoPapel"]
offset_left = -13.0
offset_top = -18.666666
offset_right = 14.0
offset_bottom = -8.666666
theme_override_font_sizes/font_size = 10
text = "Papel"

[node name="TachoPlastico" type="Sprite2D" parent="ContenedorTachos"]
texture_filter = 1
position = Vector2(800, 200)
scale = Vector2(6, 6)
texture = ExtResource("10_edw3n")

[node name="Plastico" type="Label" parent="ContenedorTachos/TachoPlastico"]
offset_left = -19.166664
offset_top = -17.666666
offset_right = 19.833336
offset_bottom = -7.666666
theme_override_font_sizes/font_size = 10
text = "Plástico"

[node name="TachoOrganico" type="Sprite2D" parent="ContenedorTachos"]
texture_filter = 1
position = Vector2(1300, 200)
scale = Vector2(6, 6)
texture = ExtResource("11_okpwp")

[node name="Organico" type="Label" parent="ContenedorTachos/TachoOrganico"]
offset_left = -22.499998
offset_top = -18.333334
offset_right = 21.500002
offset_bottom = -8.333334
theme_override_font_sizes/font_size = 10
text = "Orgánico"

[editable path="Fondo_Parallax"]
